# stratmcp2

./: .env.example  CLAUDE.md  DESIGN_RATIONALE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
strategyzr_mcp/: __init__.py  server.py
strategyzr_mcp/exporters/: __init__.py  pdf_config.py  pdf_exporter.py
strategyzr_mcp/models/: __init__.py  bmc.py  common.py  vpc.py
strategyzr_mcp/templates/: bmc_template.json  vpc_template.json
strategyzr_mcp/tools/: __init__.py  analysis_tools.py  bmc_tools.py  vpc_tools.py
strategyzr_mcp/validators/: __init__.py  fit_analyzer.py  quality_scorer.py
tests/: __init__.py  test_models.py  test_server.py  test_validators.py
