[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strategyzr-mcp"
version = "1.0.0"
description = "Alternative MCP server for Business Model Canvas and Value Proposition Canvas with structured data approach"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "StrategyZR", email = "info@strategyzr.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "business-model-canvas",
    "value-proposition-canvas",
    "strategy",
    "osterwalder"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
strategyzr-mcp = "strategyzr_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["strategyzr_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
